--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,14 @@
     "theme_color": "#000000",
     "icons": [
       {
-        "src": "icon-192.png",
+        "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Crect width='192' height='192' fill='%23000000'/%3E%3Cpath d='M96 32v128M32 96h128' stroke='%23ffffff' stroke-width='8'/%3E%3C/svg%3E",
         "sizes": "192x192",
-        "type": "image/png"
+        "type": "image/svg+xml"
       },
       {
-        "src": "icon-512.png",
+        "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' fill='%23000000'/%3E%3Cpath d='M256 96v320M96 256h320' stroke='%23ffffff' stroke-width='16'/%3E%3C/svg%3E",
         "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/svg+xml"
       }
     ]
   }
