--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,19 +2,31 @@
   "name": "風景スクリーンセーバー",
   "short_name": "スクリーンセーバー",
   "description": "美しい風景と時計表示のスクリーンセーバー",
-  "start_url": "./index.html",
+  "start_url": "/",
+  "scope": "/",
   "display": "fullscreen",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#1a365d",
+  "theme_color": "#1a365d",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Crect width='192' height='192' fill='%23000000'/%3E%3Cpath d='M96 32v128M32 96h128' stroke='%23ffffff' stroke-width='8'/%3E%3C/svg%3E",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' fill='%23000000'/%3E%3Cpath d='M256 96v320M96 256h320' stroke='%23ffffff' stroke-width='16'/%3E%3C/svg%3E",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/maskable-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/icon.svg",
+      "sizes": "any",
       "type": "image/svg+xml"
     }
   ]
