--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,6 @@ pages_build_output_dir = "public"
 
 # 互換性日付（必須）
 compatibility_date = "2025-03-23"
+
+[vars]
+UNSPLASH_API_KEY=H1uksBxyGFRLY6wPRISUjSVSCdwXQ1akYYwIoCIa1hk
