--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,4 +8,4 @@ pages_build_output_dir = "public"
 compatibility_date = "2025-03-23"
 
 [vars]
-UNSPLASH_API_KEY=H1uksBxyGFRLY6wPRISUjSVSCdwXQ1akYYwIoCIa1hk
+UNSPLASH_API_KEY = "H1uksBxyGFRLY6wPRISUjSVSCdwXQ1akYYwIoCIa1hk"
