--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,3 +9,7 @@ compatibility_date = "2025-03-23"
 
 [vars]
 UNSPLASH_API_KEY = "H1uksBxyGFRLY6wPRISUjSVSCdwXQ1akYYwIoCIa1hk"
+
+[[kv_namespaces]]
+binding = "RATE_LIMITS"
+id = "6b12be5619434fba85faf8732767a046"
